--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -57,3 +57,6 @@ flutter:
           weight: 700
         - asset: fonts/SourceHanSerifCN/SourceHanSerifCN-SemiBold.otf
           weight: 900
+
+  assets:
+    - assets/settings.json
